Optimized who should give next, separated classed into class files

--- a/src/mm/appsettings.json
+++ b/src/mm/appsettings.json
@@ -1,4 +1,11 @@
 ﻿{
+  "AppSettings": {
+    "ConnectionStrings": [
+      { "": "mongodb://localhost" },
+      { "Y31484": "mongodb://Y31484" }
+    ]
+  },
+
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
