Machine dependant Connection string now in appsettings.json, id now always lowercase

--- a/src/mm/appsettings.json
+++ b/src/mm/appsettings.json
@@ -1,9 +1,7 @@
 ﻿{
-  "AppSettings": {
-    "ConnectionStrings": [
-      { "": "mongodb://localhost" },
-      { "Y31484": "mongodb://Y31484" }
-    ]
+  "ConnectionStrings": {
+    "ConnStrMG": "mongodb://localhost",
+    "ConnStrDefault": "mongodb://Y31484"
   },
 
   "Logging": {
