Added bdone operation

--- a/src/mm/appsettings.json
+++ b/src/mm/appsettings.json
@@ -1,7 +1,7 @@
 ﻿{
   "ConnectionStrings": {
     "ConnStrMG": "mongodb://localhost",
-    "ConnStrDefault": "mongodb://Y31483"
+    "ConnStrDefault": "mongodb://Y31483.Y31484,Y31485"
   },
 
   "Logging": {
